<?xml version="1.0" encoding="UTF-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppTheme.FunQuest.FullScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_auth"
        android:fitsSystemWindows="true"
        tools:context=".ui.splashes.SplashActivity">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo_content_des"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/include_progress_bar"
            layout="@layout/include_loading_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="312dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/spacing_mlarge"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_english"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:background="@drawable/btn_bg_solid"
                android:text="@string/label_english"
                android:layout_marginEnd="@dimen/spacing_mlarge"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_arabic"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:background="@drawable/btn_bg_solid"
                android:text="@string/label_arabic" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>