<?xml version="1.0" encoding="UTF-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppTheme.FunQuest.FullScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_auth"
        android:fitsSystemWindows="true"
        tools:context=".ui.auth.forgetPassword.ResetPasswordActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/helpLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/splashLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_mlarge">

                <ImageView
                    android:id="@+id/iv_app_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/logo_content_des"
                    android:src="@drawable/app_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_loginTitle"
                    style="@style/AuthHeadingTitlePage"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:gravity="center"
                    android:text="@string/label_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

                <LinearLayout
                    android:id="@+id/inputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_loginTitle">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/font_size_large"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:errorTextColor="@color/textColorPrimaryWhite"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_code"
                            style="@style/EditTextStyle_rounded"
                            android:drawableStart="@drawable/ic_baseline_person"
                            android:drawablePadding="@dimen/spacing_middle"
                            android:hint="your Send Code"
                            android:inputType="number" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_reSendCode"
                        style="@style/AuthHeading"
                        android:text="@string/label_resend_code"
                        android:textColor="@color/textColorPrimaryGreen"
                        android:layout_marginTop="@dimen/spacing_xmedium"
                        android:layout_gravity="end"
                        android:textStyle="bold"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/font_size_large"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:errorTextColor="@color/textColorPrimaryWhite"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/textColorPrimaryWhite">
                        <!--                    app:errorEnabled="true"-->

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/EditTextStyle_rounded"
                            android:drawableStart="@drawable/ic_baseline_lock"
                            android:drawablePadding="@dimen/spacing_middle"
                            android:hint="@string/label_password"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/font_size_large"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:errorTextColor="@color/textColorPrimaryWhite"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/textColorPrimaryWhite">
                        <!--                    app:errorEnabled="true"-->

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_confirmPassword"
                            style="@style/EditTextStyle_rounded"
                            android:drawableStart="@drawable/ic_baseline_lock"
                            android:drawablePadding="@dimen/spacing_middle"
                            android:hint="@string/label_confirm_password"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/btn_bg_solid"
                    android:text="@string/label_send"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputs" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>