<?xml version="1.0" encoding="UTF-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppTheme.FunQuest.FullScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_auth"
        android:fitsSystemWindows="true"
        tools:context=".ui.splashes.AfterSplashActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/splashLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/spacing_xmlarge"
            app:layout_constraintBottom_toTopOf="@+id/helpLayout">

            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/logo_content_des"
                android:src="@drawable/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_splashTitle"
                style="@style/AuthHeadingTitle"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:text="Ready for Challenge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

            <TextView
                android:id="@+id/tv_splashDescription"
                style="@style/AuthHeading"
                android:text="Lots of challenges are waiting for you"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_splashTitle" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_splashDescription"
                android:background="@drawable/btn_bg_solid"
                android:text="@string/label_start" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/helpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_mlarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/tv_terms"
                style="@style/AuthHeading"
                android:padding="@dimen/spacing_small"
                android:text="@string/label_help"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>